--- a/space_e_hackhathon/templates/acceuil.html
+++ b/space_e_hackhathon/templates/acceuil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ma PWA Flask</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style1.css') }}">
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <meta name="theme-color" content="#007bff">
 </head>
@@ -19,7 +19,7 @@
             <div class="auth-box">
                 <h2>Connexion</h2>
                 <form action="/login" method="POST">
-                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="email" name="email" autocomplete="off" placeholder="Email" required>
                     <input type="password" name="password" placeholder="Mot de passe" required>
                     <button type="submit" class="button">Se connecter</button>
                 </form>
@@ -27,8 +27,8 @@
             <div class="auth-box">
                 <h2>Inscription</h2>
                 <form action="/add_user" method="POST">
-                    <input type="text" name="name" placeholder="Nom" required>
-                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="text" name="name" autocomplete="off" placeholder="Nom" required>
+                    <input type="email" name="email" autocomplete="off" placeholder="Email" required>
                     <input type="number" name="age" placeholder="Âge" required min="1" max="120">
                     <input type="password" name="password" placeholder="Mot de passe" required>
                     <button type="submit" class="button">S'inscrire</button>
