--- a/space_e_hackhathon/templates/account_info.html
+++ b/space_e_hackhathon/templates/account_info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informations du Compte</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_info.css') }}">
 </head>
 <body>
     <h1>Informations sur le Compte</h1>
