--- a/space_e_hackhathon/static/css/styles.css
+++ b/space_e_hackhathon/static/css/styles.css
@@ -29,7 +29,7 @@ h1 {
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    color: #4CAF50; /* Couleur verte pour le titre */
+    color: #0d2e0e; /* Couleur verte pour le titre */
     padding: 10px 20px;
     border-radius: 10px;
     font-size: 24px;
